--- a/css/index.css
+++ b/css/index.css
@@ -1,4 +1,5 @@
 body {
+    background-color: black;
     font-family: Arial, sans-serif;
     line-height: 1.6;
     margin: 0;
@@ -67,3 +68,42 @@ h1, h2 {
 a {
     color: blue;
 }
+
+@media (min-width: 600px) and (max-width: 1023px) {
+  .two-column-container {
+    display: flex;
+    gap: 20px;
+    justify-content: space-between;
+  }
+
+  .two-column-container .column {
+    width: 50%;
+  }
+
+  .section:not(.two-column-container) {
+    text-align: center;
+  }
+}
+
+@media (min-width: 1024px) {
+  /* Target the container */
+  .container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  /* Create a layout grid for the 4 middle sections */
+  .container .section:nth-of-type(2),
+  .container .section:nth-of-type(3),
+  .container .section:nth-of-type(4),
+  .container .section:nth-of-type(5) {
+    width: 100%;
+  }
+
+  .container .section-grid {
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 20px;
+    width: 100%;
+  }
