--- a/css/projects.css
+++ b/css/projects.css
@@ -27,3 +27,18 @@ body {
     margin: 20px;
     border-radius: 25px;
 }
+
+.repo-item {
+    font-size: 25px;
+    border: 5px solid green;
+    padding: 20px;
+    margin: 20px;
+    border-radius: 25px;
+    text-align: left;
+}
+
+.repo-item a {
+    color: lightseagreen;
+    font-weight: bold;
+    text-decoration: none;
+}
